--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -140,14 +140,19 @@ jobs:
             ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
             ECS_TASK_DEFINITION: ${{ secrets.ECS_TASK_DEFINITION }}
 
-        - name: Update ECS Service
+        - name: Debug ECS Variables
           run: |
-            aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --task-definition $ECS_TASK_DEFINITION
-            env:
-              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-              AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-              AWS_REGION: ${{ secrets.AWS_REGION }}
-              ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}
-              ECS_SERVICE: ${{ secrets.ECS_SERVICE }}
-              ECS_TASK_DEFINITION: ${{ secrets.ECS_TASK_DEFINITION }}
+              echo "ECS_CLUSTER=${{ secrets.ECS_CLUSTER }}"
+              echo "ECS_SERVICE=${{ secrets.ECS_SERVICE }}"
+              echo "ECS_TASK_DEFINITION=${{ secrets.ECS_TASK_DEFINITION }}"
+        # - name: Update ECS Service
+        #   run: |
+        #     aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --task-definition $ECS_TASK_DEFINITION
+        #     env:
+        #       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+        #       AWS_REGION: ${{ secrets.AWS_REGION }}
+        #       ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}
+        #       ECS_SERVICE: ${{ secrets.ECS_SERVICE }}
+        #       ECS_TASK_DEFINITION: ${{ secrets.ECS_TASK_DEFINITION }}
