--- a/.github/workflows/de.yml
+++ b/.github/workflows/de.yml
@@ -102,20 +102,20 @@ jobs:
 
       - name: Upload Dockerrun.aws.json to S3
         run: |
-          aws s3 cp Dockerrun.aws.json s3://$EB_S3_BUCKET/Dockerrun.aws.json
+          aws s3 cp Dockerrun.aws.json s3://$S3_BUCKET_NAME/Dockerrun.aws.json
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          EB_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
+          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
 
       - name: Deploy to Elastic Beanstalk
         run: |
           aws elasticbeanstalk create-application-version \
             --application-name $EB_APPLICATION_NAME \
             --version-label "v-${{ github.run_number }}" \
-            --source-bundle S3Bucket=$EB_S3_BUCKET,S3Key=Dockerrun.aws.json
+            --source-bundle S3Bucket=$S3_BUCKET_NAME,S3Key=Dockerrun.aws.json
 
           aws elasticbeanstalk update-environment \
             --environment-name $EB_ENV_NAME \
@@ -124,4 +124,4 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           EB_APPLICATION_NAME: ${{ secrets.EB_APPLICATION_NAME }}
           EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-          EB_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
+          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
