--- a/.github/workflows/de.yml
+++ b/.github/workflows/de.yml
@@ -129,22 +129,22 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
 
-      - name: Deploy to Elastic Beanstalk
-        run: |
-            aws elasticbeanstalk create-application-version \
-              --application-name ${{ secrets.EB_APPLICATION_NAME }} \
-              --version-label $GITHUB_SHA \
-              --source-bundle S3Bucket=${{ secrets.S3_BUCKET_NAME }},S3Key=Dockerrun.aws.json \
-              --region $AWS_REGION
+    #   - name: Deploy to Elastic Beanstalk
+    #     run: |
+    #         aws elasticbeanstalk create-application-version \
+    #           --application-name ${{ secrets.EB_APPLICATION_NAME }} \
+    #           --version-label $GITHUB_SHA \
+    #           --source-bundle S3Bucket=${{ secrets.S3_BUCKET_NAME }},S3Key=Dockerrun.aws.json \
+    #           --region $AWS_REGION
   
-            aws elasticbeanstalk update-environment \
-              --environment-name ${{ secrets.EB_ENV_NAME }} \
-              --version-label $GITHUB_SHA
-        env:
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            AWS_REGION: ${{ secrets.AWS_REGION }}
-            AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}            
+    #         aws elasticbeanstalk update-environment \
+    #           --environment-name ${{ secrets.EB_ENV_NAME }} \
+    #           --version-label $GITHUB_SHA
+    #     env:
+    #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #         AWS_REGION: ${{ secrets.AWS_REGION }}
+    #         AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}            
   
-            EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-            EB_APP_NAME: ${{ secrets.EB_APPLICATION_NAME }}
+    #         EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
+    #         EB_APP_NAME: ${{ secrets.EB_APPLICATION_NAME }}
