--- a/.github/workflows/de.yml
+++ b/.github/workflows/de.yml
@@ -108,7 +108,7 @@ jobs:
 
       - name: Upload Dockerrun.aws.json to S3
         run: |
-          aws s3 cp s3://$S3_BUCKET_NAME/Dockerrun.aws.json ./Dockerrun.aws.json --region $AWS_REGION
+          aws s3 cp ./Dockerrun.aws.json s3://$S3_BUCKET_NAME/Dockerrun.aws.json --region $AWS_REGION
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
