--- a/.github/workflows/de.yml
+++ b/.github/workflows/de.yml
@@ -88,7 +88,7 @@ jobs:
           echo '{
             "AWSEBDockerrunVersion": "1",
             "Image": {
-              "Name": "'$ECR_REGISTRY'",
+              "Name": "'$ECR_REGISTRY/$ECR_REPOSITORY:latest'",
               "Update": "true"
             },
             "Ports": [
@@ -129,6 +129,15 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
 
+      - name: Check Envi Elastic Beanstalk
+        run: |
+            aws elasticbeanstalk describe-environments --environment-names ${{ secrets.EB_ENV_NAME }} --query 'Environments[*].PlatformArn' --region $AWS_REGION
+        env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+            AWS_REGION: ${{ secrets.AWS_REGION }}
+            EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
       - name: Deploy to Elastic Beanstalk
         run: |
             aws elasticbeanstalk create-application-version \
@@ -148,3 +157,13 @@ jobs:
   
             EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
             EB_APP_NAME: ${{ secrets.EB_APPLICATION_NAME }}
+      - name: Get retrive Elastic Beanstalk Logs
+        run: |
+            aws elasticbeanstalk request-environment-info --environment-name ${{ secrets.EB_ENV_NAME }} --info-type tail --region $AWS_REGION
+            aws elasticbeanstalk tail-logs --environment-name ${{ secrets.EB_ENV_NAME }} --region $AWS_REGION
+        env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: ${{ secrets.AWS_REGION }}
+            AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+            EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
