--- a/.github/workflows/de.yml
+++ b/.github/workflows/de.yml
@@ -73,7 +73,7 @@ jobs:
             AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
             ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
             ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-                        
+
       - name: Save ECR Image URL
         id: ecr-image
         run: echo "ECR_IMAGE=$ECR_REGISTRY/$ECR_REPOSITORY:latest" >> $GITHUB_ENV
@@ -154,14 +154,15 @@ jobs:
       - name: Deploy to Elastic Beanstalk
         run: |
             aws elasticbeanstalk create-application-version \
-              --application-name ${{ secrets.EB_APPLICATION_NAME }} \
-              --version-label $GITHUB_SHA \
-              --source-bundle S3Bucket=${{ secrets.S3_BUCKET_NAME }},S3Key=Dockerrun.aws.json \
-              --region $AWS_REGION
+                --application-name $EB_APPLICATION_NAME \
+                --version-label $GITHUB_SHA \
+                --source-bundle S3Bucket=$S3_BUCKET_NAME,S3Key=Dockerrun.aws.json \
+                --region $AWS_REGION
   
             aws elasticbeanstalk update-environment \
-              --environment-name ${{ secrets.EB_ENV_NAME }} \
-              --version-label $GITHUB_SHA
+                --environment-name $EB_ENV_NAME \
+                --version-label $GITHUB_SHA \
+                --region $AWS_REGION
         env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
