--- a/.github/workflows/de.yml
+++ b/.github/workflows/de.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: Debug Docker Image
         run: |
-            echo "Docker Image: $ECR_REGISTRY/$ECR_REPOSITORY:latest"0
+            echo "Docker Image: $ECR_REGISTRY/$ECR_REPOSITORY:latest"
             docker images
             docker run --rm $ECR_REGISTRY/$ECR_REPOSITORY:latest echo "Docker image is working"
         env:
@@ -177,6 +177,19 @@ jobs:
             AWS_REGION: ${{ secrets.AWS_REGION }}
             EB_APPLICATION_NAME: ${{ secrets.EB_APPLICATION_NAME }}
             S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+
+      
+      - name: Wait for Elastic Beanstalk environment to be ready
+        run: |
+            aws elasticbeanstalk wait environment-ready \
+            --environment-name $EB_ENV_NAME \
+            --region $AWS_REGION
+        env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+            AWS_REGION: ${{ secrets.AWS_REGION }}
+            EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
 
       - name: Deploy new Application Version to Elastic Beanstalk
         run: |
