--- a/.github/workflows/de.yml
+++ b/.github/workflows/de.yml
@@ -178,70 +178,18 @@ jobs:
             EB_APPLICATION_NAME: ${{ secrets.EB_APPLICATION_NAME }}
             S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
 
-      
-      - name: Wait for Elastic Beanstalk environment to be ready
+      - name: Deploy New Application Version
         run: |
-            STATUS="Unknown"
-            while [ "$STATUS" != "Ready" ]; do
-                STATUS=$(aws elasticbeanstalk describe-environments 
-                --environment-names $EB_ENV_NAME \ 
-                --region $AWS_REGION \
-                --query "Environments[*].Status" \
-                --output text)
-                echo "Environment Status: $STATUS"
-                if [ "$STATUS" != "Terminated" ]; then
-                    echo "Environment has been terminated. Exiting..."
-                    exit 1
-                fi
-                sleep 30
-            done
-            echo "Environment is ready"
+            aws elasticbeanstalk update-environment \
+            --application-name $EB_APPLICATION_NAME \
+            --environment-name $EB_ENV_NAME \
+            --version-label "deploy-${GITHUB_RUN_NUMBER}" \
+            --region $AWS_REGION
         env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
             AWS_REGION: ${{ secrets.AWS_REGION }}
+            EB_APPLICATION_NAME: ${{ secrets.EB_APPLICATION_NAME }}
             EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-
-    #   - name: Deploy new Application Version to Elastic Beanstalk
-    #     run: |
-    #         aws elasticbeanstalk update-environment \
-    #         --environment-name $EB_ENV_NAME \
-    #         --version-label "deploy-${GITHUB_RUN_NUMBER}" \
-    #         --region $AWS_REGION
-    #     env:
-    #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #         AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-    #         AWS_REGION: ${{ secrets.AWS_REGION }}
-    #         EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-
-    #   - name: Deploy to Elastic Beanstalk
-    #     run: |
-    #         aws elasticbeanstalk create-application-version \
-    #             --application-name $EB_APPLICATION_NAME \
-    #             --version-label $GITHUB_SHA \
-    #             --source-bundle S3Bucket=$S3_BUCKET_NAME,S3Key=Dockerrun.aws.json \
-    #             --region $AWS_REGION
-  
-    #         aws elasticbeanstalk update-environment \
-    #             --environment-name $EB_ENV_NAME \
-    #             --version-label $GITHUB_SHA \
-    #             --region $AWS_REGION
-    #     env:
-    #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #         AWS_REGION: ${{ secrets.AWS_REGION }}
-    #         AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}            
-  
-    #         EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-    #         EB_APP_NAME: ${{ secrets.EB_APPLICATION_NAME }}
-    #   - name: Get retrive Elastic Beanstalk Logs
-    #     run: |
-    #         aws elasticbeanstalk request-environment-info --environment-name $EB_ENV_NAME --info-type tail --region $AWS_REGION            
-    #     env:
-    #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #         AWS_REGION: ${{ secrets.AWS_REGION }}
-    #         AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-    #         EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
+    
