--- a/.github/workflows/coba.yml
+++ b/.github/workflows/coba.yml
@@ -31,14 +31,30 @@ jobs:
           docker tag ${{ secrets.ECR_REPOSITORY }}:latest ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
           docker push ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
 
+      - name: Prepare Deployment package
+        run: |
+            zip -r deploy.zip Dockerrun.aws.json
+            ls -lh deploy.zip
+            aws s3 cp deploy.zip s3://${{ secrets.S3_BUCKET_NAME }}/deploy.zip    
+            
+
       - name: Deploy to Elastic Beanstalk
         run: |
           zip -r deploy.zip Dockerrun.aws.json
           aws elasticbeanstalk create-application-version \
-            --application-name my-docker-app \
+            --application-name ${{ secrets.EB_APPLICATION_NAME }} \
             --version-label v-${{ github.run_number }} \
-            --source-bundle S3Bucket=my-bucket,S3Key=deploy.zip
+            --source-bundle S3Bucket=${{ secrets.S3_BUCKET_NAME }},S3Key=deploy.zip
 
           aws elasticbeanstalk update-environment \
-            --environment-name my-docker-app-env \
+            --environment-name ${{ secrets.EB_ENV_NAME }} \
             --version-label v-${{ github.run_number }}
+        env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+            AWS_REGION: ${{ secrets.AWS_REGION }}
+            EB_APPLICATION_NAME: ${{ secrets.EB_APPLICATION_NAME }}
+            EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
+            S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+            ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
