--- a/.github/workflows/coba.yml
+++ b/.github/workflows/coba.yml
@@ -1,19 +1,19 @@
-name: Deploy to AWS Elastic Beanstalk
+name: Deploy to Elastic Beanstalk
 
 on:
   push:
     branches:
-      - main
+      - main  # Ganti dengan branch yang ingin Anda gunakan untuk deployment
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -22,39 +22,49 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Build, tag, and push image to ECR
+        id: ecr-login
         run: |
-          docker build -t ${{ secrets.ECR_REPOSITORY }} .
-          docker tag ${{ secrets.ECR_REPOSITORY }}:latest ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
-          docker push ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
-      - name: Prepare Deployment package
+      - name: Pull Docker Image from ECR
         run: |
-            zip -r deploy.zip Dockerrun.aws.json
-            ls -lh deploy.zip
-            aws s3 cp deploy.zip s3://${{ secrets.S3_BUCKET_NAME }}/deploy.zip    
-            
+          docker pull ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
+
+      - name: Save Docker Image to Tar File
+        run: |
+          docker save ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest -o image.tar
+
+      - name: Upload Docker Image to S3
+        run: |
+          aws s3 cp image.tar s3://${{ secrets.S3_BUCKET_NAME }}/image.tar
+
+      - name: Create Dockerrun.aws.json
+        run: |
+          echo '{
+            "AWSEBDockerrunVersion": "1",
+            "Image": {
+              "Name": "${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest",
+              "Update": "true"
+            },
+            "Ports": [
+              {
+                "ContainerPort": "5000",
+                "HostPort": "80"
+              }
+            ]
+          }' > Dockerrun.aws.json
+
+      - name: Upload Dockerrun.aws.json to S3
+        run: |
+          aws s3 cp Dockerrun.aws.json s3://${{ secrets.S3_BUCKET_NAME }}/Dockerrun.aws.json
 
       - name: Deploy to Elastic Beanstalk
         run: |
-          zip -r deploy.zip Dockerrun.aws.json
           aws elasticbeanstalk create-application-version \
             --application-name ${{ secrets.EB_APPLICATION_NAME }} \
             --version-label v-${{ github.run_number }} \
-            --source-bundle S3Bucket=${{ secrets.S3_BUCKET_NAME }},S3Key=deploy.zip
+            --source-bundle S3Bucket=${{ secrets.S3_BUCKET_NAME }},S3Key=Dockerrun.aws.json
 
           aws elasticbeanstalk update-environment \
             --environment-name ${{ secrets.EB_ENV_NAME }} \
             --version-label v-${{ github.run_number }}
-        env:
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-            AWS_REGION: ${{ secrets.AWS_REGION }}
-            EB_APPLICATION_NAME: ${{ secrets.EB_APPLICATION_NAME }}
-            EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-            S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-            ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
