--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ LICENSE
 
 .github/workflows/deploy.yml_
 .github/workflows/de.yml_
-.github/workflows/tes.yml
+.github/workflows/coba.yml
 
 LICENSE
