--- a/.github/workflows/tes.yml
+++ b/.github/workflows/tes.yml
@@ -82,6 +82,16 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Verify Docker Image Exists in ECR
+        run: |
+          aws ecr describe-images --repository-name ${{ secrets.ECR_REPOSITORY }} --image-ids imageTag=$GITHUB_SHA
+
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }} 
       - name: Delete existing application version if exists
         run: |
           aws elasticbeanstalk delete-application-version --application-name ${{ secrets.EB_APP_NAME }} --version-label $GITHUB_SHA --delete-source-bundle
@@ -94,8 +104,9 @@ jobs:
           EB_APP_NAME: ${{ secrets.EB_APP_NAME }}
       - name: Deploy to Elastic Beanstalk
         run: |
-          aws elasticbeanstalk create-application-version --application-name ${{ secrets.EB_APP_NAME }} --version-label "${GITHUB_SHA}-${{ github.run_number }} --source-bundle "{\"S3Bucket\": \"${{ secrets.S3_BUCKET_NAME }}\", \"S3Key\": \"flask-app.zip\"}" --process
-          aws elasticbeanstalk update-environment --environment-name ${{ secrets.EB_ENV_NAME }} --version-label $GITHUB_SHA
+          aws elasticbeanstalk create-application-version --application-name ${{ secrets.EB_APP_NAME }} --version-label "${GITHUB_SHA}-${{ github.run_number }}" --source-bundle "{\"S3Bucket\": \"${{ secrets.S3_BUCKET_NAME }}\", \"S3Key\": \"flask-app.zip\"}" --process
+          aws elasticbeanstalk update-environment --environment-name ${{ secrets.EB_ENV_NAME }} --version-label "${GITHUB_SHA}-${{ github.run_number }}"
+
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
